ingress/ingress-wear-watch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
    - http:
        paths:
          - backend:
              servicePort: 80
              serviceName: watch-service
            path: /watch
          - backend:
              servicePort: 80
              serviceName: wear-service
            path: /wear
